derive/tests/compile_fail/unit_struct.rs
use config_derive::Deserialize;

#[derive(Deserialize)]
struct MyUnit;

fn main() {}
